--- a/app/src/main/res/layouts/activities/layout/activity_player.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_player.xml
@@ -53,111 +53,14 @@
             android:layout_gravity="bottom"
             app:tabMode="scrollable"/>
     </me.henrytao.smoothappbarlayout.SmoothAppBarLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_add_black_24dp"
+        app:layout_anchor="@id/smooth_app_bar_layout"
+        app:layout_anchorGravity="bottom|right|end"
+        />
+
 </android.support.design.widget.CoordinatorLayout>
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-    <!--<android.support.design.widget.CoordinatorLayout-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--tools:context="com.example.kevin.fifastatistics.activities.PlayerActivty">-->
-
-    <!--<android.support.v4.view.ViewPager-->
-    <!--android:id="@+id/viewpager"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"/>-->
-
-    <!--<me.henrytao.smoothappbarlayout.SmoothAppBarLayout-->
-    <!--android:id="@+id/appBar"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:fitsSystemWindows="true" >-->
-
-    <!--<android.support.design.widget.CollapsingToolbarLayout-->
-    <!--android:id="@+id/collapsing_toolbar"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="@dimen/app_bar_height"-->
-    <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
-    <!--android:fitsSystemWindows="true" >-->
-
-    <!--&lt;!&ndash;<de.hdodenhof.circleimageview.CircleImageView&ndash;&gt;-->
-    <!--&lt;!&ndash;xmlns:app="http://schemas.android.com/apk/res-auto"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:id="@+id/user_image"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="@dimen/user_image_height"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="@dimen/user_image_height"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_marginTop="60dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_marginLeft="20dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:layout_collapseMode="parallax"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:layout_collapseParallaxMultiplier="0.5"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:layout_scrollFlags="scroll|enterAlways"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:minHeight="@dimen/player_image_small_width"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:minWidth="@dimen/player_image_small_width"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:civ_border_width="@dimen/civ_border_width"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:civ_border_color="#FFFFFF"/>&ndash;&gt;-->
-
-    <!--<android.support.v7.widget.Toolbar-->
-    <!--android:id="@+id/toolbar"-->
-    <!--android:background="@android:color/transparent"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="?attr/actionBarSize"-->
-    <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
-    <!--app:layout_collapseMode="pin">-->
-    <!--</android.support.v7.widget.Toolbar>-->
-
-    <!--&lt;!&ndash;<me.henrytao.smoothappbarlayout.SmoothCollapsingToolbarLayout&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:gravity="left|center_vertical"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:minHeight="?attr/actionBarSize"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_avatar_id="@+id/avatar"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_collapsed_avatarSize="@dimen/player_image_small_width"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_collapsed_offsetX="?attr/actionBarSize"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_collapsed_offsetY="0dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_collapsed_subtitleTextSize="14dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_collapsed_titleTextSize="16dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_expanded_avatarSize="@dimen/user_image_height"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_expanded_subtitleTextSize="16dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_expanded_titleTextSize="34dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_subtitle_id="@+id/subtitle"&ndash;&gt;-->
-    <!--&lt;!&ndash;app:sctl_title_id="@+id/title">&ndash;&gt;-->
-
-    <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
-    <!--&lt;!&ndash;android:id="@+id/avatar"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="@dimen/user_image_height"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="@dimen/user_image_height"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_gravity="center_vertical"/>&ndash;&gt;-->
-
-    <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_gravity="center_vertical"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_marginLeft="@dimen/activity_horizontal_margin"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:orientation="vertical">&ndash;&gt;-->
-
-    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-    <!--&lt;!&ndash;android:id="@+id/title"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="40dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;style="@style/TextAppearance.AppCompat.Display1" />&ndash;&gt;-->
-
-    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-    <!--&lt;!&ndash;android:id="@+id/subtitle"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="20dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;style="@style/TextAppearance.AppCompat.Subhead" />&ndash;&gt;-->
-    <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
-    <!--&lt;!&ndash;</me.henrytao.smoothappbarlayout.SmoothCollapsingToolbarLayout>&ndash;&gt;-->
-
-    <!--</android.support.design.widget.CollapsingToolbarLayout>-->
-
-    <!--</me.henrytao.smoothappbarlayout.SmoothAppBarLayout>-->
-
-    <!--<android.support.design.widget.TabLayout-->
-    <!--android:id="@+id/tabs"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="?attr/colorPrimary"-->
-    <!--app:tabMode="scrollable"/>-->
-
-    <!--</android.support.design.widget.CoordinatorLayout>-->
