--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,8 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_search"
-        android:orderInCategory="200"
+        android:orderInCategory="100"
         android:title="@string/menuItem_search"
         android:icon="@drawable/ic_search_white_24dp"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/camera"
+        android:orderInCategory="200"
+        android:title="Camera"
+        android:icon="@drawable/ic_camera_alt_white_24dp"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/confirm"
+        android:orderInCategory="200"
+        android:title="Confirm"
+        android:icon="@drawable/ic_check_white_24dp"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
 </menu>
