--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,8 @@
     <dimen name="app_bar_height">156dp</dimen>
     <dimen name="toolbar_height">48dp</dimen>
     <dimen name="status_bar_height">24dp</dimen>
+    <dimen name="search_item_size">48dp</dimen>
+    <dimen name="search_list_item_height">72dp</dimen>
 
     <dimen name="civ_border_width">4dp</dimen>
 
