--- a/app/src/main/res/layouts/fragments/layout/fragment_player_overview.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_player_overview.xml
@@ -4,7 +4,7 @@
              android:layout_height="match_parent"
              tools:context="com.example.kevin.fifastatistics.fragments.PlayerOverviewFragment">
 
-    <me.henrytao.smoothappbarlayout.widget.NestedScrollView
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,6 +18,6 @@
 
         </LinearLayout>
 
-    </me.henrytao.smoothappbarlayout.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </FrameLayout>
