--- a/app/src/main/res/layouts/shared/layout/fragment_matches.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_matches.xml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/matches_recyclerview"
+    <data>
+        <variable
+            name="fragmentMatchesViewModel"
+            type="com.example.kevin.fifastatistics.viewmodels.MatchesFragmentViewModel"/>
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"/>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/matches_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"/>
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:indeterminate="true"
+            android:visibility="@{fragmentMatchesViewModel.progressBarVisibility}"
+            style="?android:attr/progressBarStyle"/>
+
+    </FrameLayout>
 
 </layout>
