--- a/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
@@ -11,58 +11,50 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/cardViewBackground"
+        android:orientation="vertical"
+        android:elevation="@dimen/elevation">
 
-        <android.support.v7.widget.CardView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="@{headerViewModel.messageVisibility}"
-            style="@style/CardViewStyle">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_gravity="start"
                 android:gravity="center_horizontal"
-                android:textAppearance="@style/text_bold_small"
-                android:text="@{headerViewModel.message}"/>
+                android:textAppearance="@style/text_bold_grey_small"
+                android:text="@{headerViewModel.date}"/>
 
-        </android.support.v7.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/cardViewBackground"
-                android:orientation="vertical"
-                android:elevation="@dimen/elevation">
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_gravity="end"
+                android:gravity="center_horizontal"
+                android:textAppearance="@style/text_bold_grey_small"
+                android:text="@{headerViewModel.message}"
+                android:visibility="@{headerViewModel.messageVisibility}"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/activity_vertical_margin"
-                    android:layout_gravity="start"
-                    android:gravity="center_horizontal"
-                    android:textAppearance="@style/text_bold_grey_small"
-                    android:text="@{headerViewModel.date}"/>
+        </FrameLayout>
 
-                <View style="@style/Divider"
-                    android:layout_marginStart="@dimen/activity_horizontal_margin"
-                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+        <View style="@style/Divider"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
 
-                <include
-                    layout="@layout/item_event_header_team_score"
-                    bind:imageUrl="@{headerViewModel.winnerImageUrl}"
-                    bind:name="@{headerViewModel.winnerName}"
-                    bind:score="@{headerViewModel.winnerScore}"/>
+        <include
+            layout="@layout/item_event_header_team_score"
+            bind:imageUrl="@{headerViewModel.winnerImageUrl}"
+            bind:name="@{headerViewModel.winnerName}"
+            bind:score="@{headerViewModel.winnerScore}"/>
 
-                <include
-                    layout="@layout/item_event_header_team_score"
-                    bind:imageUrl="@{headerViewModel.loserImageUrl}"
-                    bind:name="@{headerViewModel.loserName}"
-                    bind:score="@{headerViewModel.loserScore}"/>
-
-            </LinearLayout>
+        <include
+            layout="@layout/item_event_header_team_score"
+            bind:imageUrl="@{headerViewModel.loserImageUrl}"
+            bind:name="@{headerViewModel.loserName}"
+            bind:score="@{headerViewModel.loserScore}"/>
 
     </LinearLayout>
 
